2021-06-07  Tom de Vries  <tdevries@suse.de>

	* gdb.base/new-ui-pending-input.exp
	(test_command_line_new_ui_pending_input): Fix regexp for "initial
	prompt on extra console".

2021-06-07  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (run_test): Move "random line" regexp
	up.

2021-06-06  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.server/stop-reply-no-thread-multi.exp: Clear sysroot when
	host and target are local.

2021-06-05  Hannes Domani  <ssbssa@yahoo.de>

	* gdb.python/py-symbol.exp: Fix tests for Python 3.

2021-06-05  Shahab Vahedi  <shahab@synopsys.com>

	* gdb.arch/arc-disassembler-options.exp: New test.
	* gdb.arch/arc-disassembler-options.s: New test source.

2021-06-04  Tom Tromey  <tromey@adacore.com>

	* gdb.ada/array_of_symbolic_length.exp: New file.
	* gdb.ada/array_of_symbolic_length/foo.adb: New file.
	* gdb.ada/array_of_symbolic_length/gl.adb: New file.
	* gdb.ada/array_of_symbolic_length/gl.ads: New file.
	* gdb.ada/array_of_symbolic_length/pck.adb: New file.
	* gdb.ada/array_of_symbolic_length/pck.ads: New file.

2021-06-03  Magne Hov  <mhov@undo.io>

	PR python/27841
	* gdb.python/py-events.exp: Extend inferior exit tests.
	* gdb.python/py-events.py: Print inferior exit PID.

2021-06-03  Hannes Domani  <ssbssa@yahoo.de>

	* gdb.python/py-symbol.exp: Test symbol constants.

2021-06-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* gdb.dwarf2/per-bfd-sharing.exp: Fix temp-dir leakage.

2021-06-02  Carl Love  <cel@us.ibm.com>

	* gdb.threads/threadapply.c: Add global mybarrier.
	(main): Add pthread_barrier_init.
	(thread_function): Replace while loop with myp increment and
	pthread_barrier_wait.

2021-06-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* lib/gdb.exp (gdb_compile): Only add the -J option when using a
	gcc based Fortran compiler, for example, flang does not support
	this option.

2021-06-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* lib/fortran.exp (fortran_int8): Escape '*' in pattern.
